--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,13 @@
     <string name="notification_detail_on_startup_post">to see what to do.</string>
     <string name="notification_window_never_later">Don\'t show this message again</string>
     <string name="notification_window_close">Close</string>
+    <string name="notification_launch_this_app">Launch Blue Line Console</string>
+    <string name="notification_channel_always_show">Notification icon always shown to launch Blue Line Console everywhere</string>
     <string name="pref_display_name_main_category">General</string>
     <string name="pref_display_name_main_show_startup_help">Show help on startup</string>
+    <string name="pref_display_name_main_always_show_notification">Always show icon as notification</string>
     <string name="pref_display_summary_main_show_startup_help">This option just shows you the guidance for help command. It is better to disable this option once you remembered "help" command.</string>
+    <string name="pref_display_summary_main_always_show_notification">Always show the notification icon to start Blue Line Console everywhere.</string>
     <string name="pref_display_name_apps_category">Launching Apps</string>
     <string name="pref_display_name_apps_show_package_name">Show package name</string>
     <string name="pref_display_summary_apps_show_package_name">Note: You can find apps by a part of package name even this check is off.</string>
@@ -47,6 +51,6 @@
         \nName for search engine name can be abbreviated.
         \nFor example, \"d somequery\" is equivalent to \"duckduckgo somequery\".
         \n
-        \nHint: Blue Line Console does not provide the method to open itself from other screen. It is recommended to register Blue Line Console on convenience key if available, or to make Blue Line Console launchable from any screen by installing some key remapping app.
+        \nHint: Blue Line Console can be launched from notification menu by always showing notification. Find the option from config command.
     </string>
 </resources>
