--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -36,6 +36,9 @@
     <string name="pref_default_search">默认搜索引擎</string>
     <string name="pref_default_search_summary">总是在列表的底部显示特定的搜索引擎</string>
     <string name="pref_default_search_none">（无）</string>
+    <string name="pref_string_match_strategy">文本搜索匹配样式</string>
+    <string name="pref_string_match_strategy_substring">正常</string>
+    <string name="pref_string_match_strategy_skipped_substring">跳跃子字符串（如，搜索 &quot;abd&quot; 显示 &quot;abcdef&quot;）</string>
     <string name="add_button_text">添加</string>
     <string name="update_button_text">更新</string>
     <string name="delete_button_text">删除</string>
