--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="pref_category_main">General</string>
     <string name="pref_category_apps">Launching Apps</string>
     <string name="pref_category_urls">Web Pages and Searches</string>
+    <string name="pref_default_assist_app_setting">Set as default assistant app</string>
+    <string name="pref_default_assist_app_setting_summary">To open Blue Line Console by long-pressing home button everywhere, set it as default assistant app from setting menu.</string>
     <string name="pref_display_name_main_show_startup_help">Show help on startup</string>
     <string name="pref_display_name_main_always_show_notification">Always show icon as notification</string>
     <string name="pref_display_summary_main_show_startup_help">This option just shows you the guidance for help command. It is better to disable this option once you remembered "help" command.</string>
@@ -75,7 +77,7 @@
         \nName for search engine name can be abbreviated.
         \nFor example, \"d somequery\" is equivalent to \"duckduckgo somequery\".
         \n
-        \nHint: Set up Blue Line Console as Default Assist App from Settings &gt; Apps &amp; notofications &gt; Default Apps &gt; Assist app or similar menu, to make Blue Line Console open on long-pressing home button.
+        \nHint: Set up Blue Line Console as Default Assistant App from Settings &gt; Apps &amp; notofications &gt; Default Apps &gt; Assistant app or similar menu, to make Blue Line Console open on long-pressing home button.
         \nHint: Blue Line Console can be launched from notification menu by always showing notification. Find the option from config command.
     </string>
     <string name="err_invalid_url">Invalid URL: must start with https:// or http:// and at least one more slash ("/").</string>
